# autoGrim

./: .env.example  .gitignore  README.md  impossible_numbers.py  llm_extractor.py  main.py  pyproject.toml  requirements.txt  setup.py
cache/: damisch-et-al-2010-keep-your-fingers-crossed-how-superstition-improves-performance.pdf.json  did-ohios-vaccine-lottery-increase-vaccination-rates-a-pre-registered-synthetic-control-study.pdf.json
output/: test_analysis_20250314_000324.json  test_analysis_20250314_000338.txt
results/: damisch-et-al-2010-keep-your-fingers-crossed-how-superstition-improves-performance_analysis_20250313_235240.json  damisch-et-al-2010-keep-your-fingers-crossed-how-superstition-improves-performance_analysis_20250313_235240.txt  damisch-et-al-2010-keep-your-fingers-crossed-how-superstition-improves-performance_analysis_20250314_003256.txt
src/detectbadnumbers/: __init__.py  cli.py  impossible_numbers.py  llm_extractor.py
tests/: conftest.py  requirements-test.txt  test_cli.py  test_impossible_numbers.py  test_llm_extractor.py
