[project]
name = "detectbadnumbers"
version = "0.1.0"
description = "A tool to detect impossible numbers in statistical data from research papers"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "google-generativeai>=0.3.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]
requires-python = ">=3.8"

[project.scripts]
detectbadnumbers = "detectbadnumbers.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detectbadnumbers"] 